// ERD – Cosmetics Management System (DBML / dbdiagram.io)
// Mỗi service sở hữu một DB riêng:
//   user_service, authentication_service, authorization_service,
//   department_service, employee_service, customer_service,
//   category_service, supplier_service, cosmetic_service,
//   inventory_service, purchase_service, order_service,
//   invoice_service, basket_service.

// ================= basket-service =================
Table carts {
  id uuid [pk, default: `gen_random_uuid()`]
  customer_id varchar [unique, note: 'logical ref -> customers.id']
  status varchar [default: 'OPEN', note: 'OPEN / CHECKED_OUT']
  created_at timestamptz
  updated_at timestamptz
}

Table cart_items {
  id uuid [pk, default: `gen_random_uuid()`]
  cart_id uuid [ref: > carts.id]
  variant_id varchar [note: 'logical ref -> cosmetic_variants.id']
  quantity integer
  created_at timestamptz
  updated_at timestamptz
}

// ================= employee-service =================
Table employees {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id varchar [unique, note: 'logical ref -> users.id']
  code varchar [unique]
  department_id varchar [note: 'logical ref -> departments.id']
  hired_at timestamptz
  status varchar [default: 'ACTIVE', note: 'ACTIVE / INACTIVE / ON_LEAVE / TERMINATED']
  phone varchar
  address varchar
  position varchar [note: 'staff / manager']
  created_at timestamptz
  updated_at timestamptz
}

// ================= supplier-service =================
Table suppliers {
  id uuid [pk, default: `gen_random_uuid()`]
  code varchar [unique]
  name varchar
  email varchar [unique]
  phone varchar
  address varchar
  is_active boolean [default: true]
  created_at timestamptz
  updated_at timestamptz
}

// ================= purchase-service =================
Table purchase_orders {
  id uuid [pk, default: `gen_random_uuid()`]
  code varchar [unique]
  supplier_id varchar [note: 'logical ref -> suppliers.id']
  status varchar [default: 'PENDING', note: 'PENDING / COMPLETED / CANCELLED']
  total_amount numeric(12,2) [default: 0]
  created_at timestamptz
  updated_at timestamptz
}

Table purchase_order_lines {
  id uuid [pk, default: `gen_random_uuid()`]
  purchase_order_id uuid [ref: > purchase_orders.id]
  variant_id varchar [note: 'logical ref -> cosmetic_variants.id']
  quantity integer [default: 1]
  unit_price numeric(12,2)
  created_at timestamptz
  updated_at timestamptz
}

Table purchase_transactions {
  id uuid [pk, default: `gen_random_uuid()`]
  purchase_order_id uuid [ref: > purchase_orders.id]
  variant_id varchar [note: 'logical ref -> cosmetic_variants.id']
  quantity integer [default: 1]
  unit_price numeric(12,2)
  subtotal numeric(12,2) [default: 0]
  employee_id varchar [note: 'logical ref -> employees.id']
  created_at timestamptz
  updated_at timestamptz
}

// ================= user-service =================
Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  first_name varchar
  last_name varchar
  gender varchar [note: 'male / female / other']
  email varchar [unique]
  role_id varchar [note: 'logical ref -> roles.id']
  is_active boolean [default: true]
  created_at timestamptz
  updated_at timestamptz
}

// ================= department-service =================
Table departments {
  id uuid [pk, default: `gen_random_uuid()`]
  code varchar [unique]
  name varchar [unique]
  manager_id varchar [note: 'logical ref -> employees.id']
  is_active boolean [default: true]
  created_at timestamptz
  updated_at timestamptz
}

// ================= invoice-service =================
Table invoices {
  id uuid [pk, default: `gen_random_uuid()`]
  code varchar [unique]
  order_id varchar [unique, note: 'logical ref -> orders.id']
  customer_id varchar [note: 'logical ref -> customers.id']
  total_amount numeric(12,2) [default: 0]
  paid_amount numeric(12,2) [default: 0]
  status varchar [default: 'UNPAID', note: 'UNPAID / PARTIAL / PAID']
  note varchar
  created_at timestamptz
  updated_at timestamptz
}

// ================= authentication-service =================
Table auth_users {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [unique, note: 'logical ref -> users.id']
  password varchar [note: 'hashed, hidden column']
  email_verified_at timestamptz
  created_at timestamptz
  updated_at timestamptz
}

// ================= customer-service =================
Table customers {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id varchar [unique, note: 'logical ref -> users.id']
  code varchar [unique]
  created_at timestamptz
  updated_at timestamptz
}

Table addresses {
  id uuid [pk, default: `gen_random_uuid()`]
  customer_id uuid [ref: > customers.id]
  city varchar
  street varchar
  created_at timestamptz
  updated_at timestamptz
}

Table phones {
  id uuid [pk, default: `gen_random_uuid()`]
  customer_id uuid [ref: > customers.id]
  phone varchar [unique]
  created_at timestamptz
  updated_at timestamptz
}

// ================= category-service =================
Table categories {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [unique]
  description varchar
  is_active boolean [default: true]
  created_at timestamptz
  updated_at timestamptz
}

// ================= authorization-service =================
Table roles {
  id varchar [pk, note: 'admin / employee / customer']
  name varchar
}

// ================= cosmetic-service =================
Table cosmetics {
  id uuid [pk, default: `gen_random_uuid()`]
  code varchar [unique]
  name varchar
  brand varchar
  origin varchar
  description varchar(1000)
  image_url varchar(500)
  is_active boolean [default: true]
  created_at timestamptz
  updated_at timestamptz
}

Table cosmetic_variants {
  id uuid [pk, default: `gen_random_uuid()`]
  cosmetic_id uuid [ref: > cosmetics.id]
  name varchar
  color varchar
  volume varchar
  price numeric(12,2)
  cost_price numeric(12,2)
  is_active boolean [default: true]
  created_at timestamptz
  updated_at timestamptz
}

Table cosmetic_categories {
  id uuid [pk, default: `gen_random_uuid()`]
  cosmetic_id uuid [ref: > cosmetics.id]
  category_id uuid [note: 'logical ref -> categories.id']
  created_at timestamptz
}

// ================= inventory-service =================
Table inventories {
  id uuid [pk, default: `gen_random_uuid()`]
  variant_id varchar [unique, note: 'logical ref -> cosmetic_variants.id']
  quantity integer [default: 0]
  expiry_date date
  last_updated_at timestamptz
  created_at timestamptz
  updated_at timestamptz
}

Table stock_adjustments {
  id uuid [pk, default: `gen_random_uuid()`]
  inventory_id uuid [note: 'logical ref -> inventories.id']
  variant_id varchar [note: 'logical ref -> cosmetic_variants.id']
  adjustment integer [note: '+/-']
  reason varchar
  note varchar
  created_by varchar [note: 'logical ref -> employees.id / users.id']
  created_at timestamptz
  updated_at timestamptz
}

// ================= order-service =================
Table orders {
  id uuid [pk, default: `gen_random_uuid()`]
  code varchar [unique]
  customer_id varchar [note: 'logical ref -> customers.id']
  status varchar [default: 'PENDING', note: 'PENDING / COMPLETED / CANCELLED']
  total_amount numeric(12,2) [default: 0]
  created_at timestamptz
  updated_at timestamptz
}

Table order_lines {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [ref: > orders.id]
  variant_id varchar [note: 'logical ref -> cosmetic_variants.id']
  quantity integer [default: 1]
  unit_price numeric(12,2)
  created_at timestamptz
  updated_at timestamptz
}

Table order_transactions {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [ref: > orders.id]
  variant_id varchar [note: 'logical ref -> cosmetic_variants.id']
  quantity integer [default: 1]
  unit_price numeric(12,2)
  subtotal numeric(12,2) [default: 0]
  employee_id varchar [note: 'logical ref -> employees.id']
  created_at timestamptz
  updated_at timestamptz
}

// =====================================================================
// Liên hệ liên service (logical) — ghi chú: không có FK ở mức DB,
// tính toàn vẹn đảm bảo ở tầng ứng dụng. Nếu muốn quote link trong
// dbdiagram.io chỉ dùng các Ref thật bên dưới.
// ---------------------------------------------------------------------
Ref: cart_items.cart_id > carts.id

Ref: addresses.customer_id > customers.id
Ref: phones.customer_id > customers.id

Ref: cosmetic_variants.cosmetic_id > cosmetics.id
Ref: cosmetic_categories.cosmetic_id > cosmetics.id

Ref: purchase_order_lines.purchase_order_id > purchase_orders.id
Ref: purchase_transactions.purchase_order_id > purchase_orders.id

Ref: order_lines.order_id > orders.id
Ref: order_transactions.order_id > orders.id